--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "dexie": "^2.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -40,15 +39,19 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/user-event": "^7.2.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jest-dom": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-testing-library": "^3.0.3",
     "prettier": "^1.19.1",
     "redux-devtools-extension": "^2.13.8"
   }
