--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@types/jest": "^25.2.1",
     "dexie": "^2.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
